--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
-    "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
+    "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.474.0",
+    "mongoose": "^8.9.5",
     "next": "15.1.6",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.6.0",
@@ -32,6 +36,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "22.10.10",
+    "@types/react": "19.0.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
