--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "mongoose": "^8.9.5",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
